// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-divider size full 1`] = `
<mg-divider>
  <template shadowrootmode="open">
    <div class="mg-c-divider mg-c-divider--full"></div>
  </template>
</mg-divider>
`;

exports[`mg-divider size regular 1`] = `
<mg-divider>
  <template shadowrootmode="open">
    <div class="mg-c-divider"></div>
  </template>
</mg-divider>
`;

exports[`mg-divider size undefined 1`] = `
<mg-divider>
  <template shadowrootmode="open">
    <div class="mg-c-divider"></div>
  </template>
</mg-divider>
`;
